# LeamOpenGL-MinGW-w64

./: .gitignore  CMakeLists.txt  README.md
init/: init_lib.bat  init_lib.sh
init/py/: config.json  init_dependencies.py
py/: config.json  init_dependencies.py  url.json
resources/shader/: Shader.config.json
resources/shader/basicLighting/: basic_lighting.frag  basic_lighting.vert  light_cube.vert
resources/shader/colors/: colors.frag
resources/shader/depthTesting/: depthTesting.frag  depthTesting.vert
resources/shader/flashlight/: flashlight.frag  flashlight.vert
resources/shader/lightingMaps/: lightingMaps.vert
resources/shader/materials/: light_cube.frag  light_cube.vert  materials.frag  materials.vert
resources/shader/model/: light_cube.frag  light_cube.vert  model.frag  model.vert
resources/shader/multipleLights/: multipleLights.frag  multipleLights.vert
resources/shader/parallelLight/: parallelLight.frag
resources/shader/pointLight/: pointLight.frag
resources/shader/stencilTesting/: color.frag  stencilTesting.frag  stencilTesting.vert
scanVariables/: CMakeLists.txt
scanVariables/src/: ScanVariables.cpp
scanVariables/src/lib/include/: ScanVariablesTools.h
scanVariables/src/lib/src/: ScanVariablesTools.cpp
src/chapter/basicLighting/: basicLighting.cpp
src/chapter/colors/: colors.cpp
src/chapter/depthTesting/: depthTesting.cpp
src/chapter/flashlight/: flashlight.cpp
src/chapter/light/: light.cpp
src/chapter/lightingMaps/: lightingMaps.cpp
src/chapter/materials/: materials.cpp
src/chapter/model/: model.cpp
src/chapter/multipleLights/: multipleLights.cpp
src/chapter/parallelLight/: parallelLight.cpp
src/chapter/pointLight/: pointLight.cpp
src/chapter/shaders/: shaders.cpp
src/chapter/stencilTesting/: stencilTesting.cpp
src/lib/include/: OpenGLTools.h  packGlm.h
src/lib/include/chapter/basicLighting/: Uniform.h
src/lib/include/chapter/colors/: Uniform.h
src/lib/include/chapter/depthTesting/: Uniform.h
src/lib/include/chapter/flashlight/: Uniform.h
src/lib/include/chapter/lightingMaps/: Uniform.h
src/lib/include/chapter/materials/: Uniform.h
src/lib/include/chapter/model/: Uniform.h
src/lib/include/chapter/multipleLights/: Uniform.h
src/lib/include/chapter/parallelLight/: Uniform.h
src/lib/include/chapter/pointLight/: Uniform.h
src/lib/include/chapter/stencilTesting/: Uniform.h
src/lib/src/: Camera.cpp  Init.cpp  Mesh.cpp  Model.cpp  OperateFunction.cpp  Shader.cpp
